--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
+    "touroff-app.js": {
+      "bower": [
+        "angular",
+        "angular-ui-router",
+        "angular-bootstrap"
+      ],
+      "files": [
+        "touroff-app/**/*.js"
+      ]
+    },
+    "sage-app.js": {
+      "bower": [
+        "angular",
+        "angular-ui-router",
+        "angular-bootstrap"
+      ],
+      "files": [
+        "sage-app/**/*.js"
+      ]
+    },
     "main.js": {
       "files": [
         "scripts/main.js"
