--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,23 +1,14 @@
 {
   "dependencies": {
-    "touroff-app.js": {
+    "places-app.js": {
       "bower": [
         "angular",
+        "angular-route",
         "angular-ui-router",
         "angular-bootstrap"
       ],
       "files": [
-        "touroff-app/**/*.js"
-      ]
-    },
-    "sage-app.js": {
-      "bower": [
-        "angular",
-        "angular-ui-router",
-        "angular-bootstrap"
-      ],
-      "files": [
-        "sage-app/**/*.js"
+        "place-app/**/*.js"
       ]
     },
     "main.js": {
