--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-material": "~0.11.4",
     "angular-ui-router": "~0.2.15",
     "angular-bootstrap": "~0.14.3",
-    "angular-route": "~1.4.7"
+    "angular-route": "~1.4.7",
+    "angular-animate": "~1.4.8",
+    "angular-aria": "~1.4.8"
   },
   "overrides": {
     "modernizr": {
